[tool.poetry]
name = "oscar_tshirts_shop"
version = "0.1.0"
description = "GPT-oriented Oscar eshop for custom T-Shirts"
authors = ["Yauheni Bokach <dharmagetic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
